# $Id$

2011-05-24 <fumiyas at OSS Technology, Inc. Japan>
	* smbldap-populate, smbldap_tools.pm: Use /nonexistent instead
	  of /dev/null for guest's and computer's homeDirectory

2011-03-09 <fumiyas at OSS Technology, Inc. Japan>
	* smbldap_tools.pm: Use Encode instead of Unicode::MapUTF8

2011-02-23 <fumiyas at OSS Technology, Inc. Japan>
	* smbldap_tools.pm:
	  - get_next_id: Use getgrgid() for GID number
	  - read_parameter: Use lexically-scoped variable $line
	    instead of global $_
	  - read_user_human_readable: Use UTF-8 flaged string and
	    \P{IsPrint} to check if an LDAP attribute has non-printable
	    characters or not
	* smbldap-populate: Fix wrong sambaGroupType values for local groups
	* Replace bare "smbpasswd" with "$config{smbpasswd}"
	* smbldap-useradd: Add -h (--no-dereference) option to the
	  chown(1) command-line
	* smbldap-useradd: Extend -Z (--attr) option to take multiple
	  -Z options
	* smbldap-usermod: Set sambaPwdLastSet to the current time
	  if "-B 0" is used (for Samba 3.0.25 and later)
	* smbldap-usermod: Extend -Z (--attr) option:
	  - Take multiple -Z options
	  - Append a value to a multi-value attribute by -Z +name=value
	  - Remove a value from a multi-value attribute by -Z -name=value
	  - Remove a attribte by -Z -name

2010-11-15 <mm@FreeBSD.org>
	* smbldap-useradd:
	  - fix Z option in getopt (custom LDAP attribute)
	  - drop unused L option from getopt
	  - alphabetically reorganize getopt options
	  - fix several mis-spellings and typos
	(thx to Paul Howarth <paul@city-fan.org>)
	* other utilities:
	  - alphabetically reorganize getopt and help
	* new tag 0.9.6

2010-10-21 <mm@FreeBSD.org>
	* new tool: smbldap-grouplist (list LDAP groups)
	* smbldap-useradd, smbldap-usershow, smbldap-usermod:
	  - change default encoding of givenName and sn to UTF-8 (bug #11717)
	  - new option: -X (input/output encoding, defaults to UTF-8)
	  - new option: -O (localMailAddress attribute)