@@ -85,12 +85,7 @@ $ldap_master->unbind();
 if ($Options{'l'}) {
     if (! $entry->get_value('userPassword')) {
         print "ACL on userPassword requires authentication... \n";
-        # prompt for password
-        print "Please enter your UNIX password: ";
-        system "stty -echo" if (-t STDIN);
-        chomp($pass=<STDIN>);
-        system "stty echo" if (-t STDIN);
-        print "\n";
+	$pass = read_password("Please enter your UNIX password: ");
         # now bind again with user's parameters
         $config{masterDN}="$dn";
         $config{masterPw}="$pass";
@@ -166,12 +161,7 @@ if ($Options{'l'}) {
 if ($< != 0) {
     # non-root user
     if (!defined($pass)) {
-    # prompt for password
-    print "UNIX password: ";
-system "stty -echo" if (-t STDIN);
-chomp($pass=<STDIN>);
-system "stty echo" if (-t STDIN);
-print "\n";
+	$pass = read_password("UNIX password: ");
 
 # now make a connection with the user's dn and password
 $config{masterDN}="$dn";
